Reloading library breaks animated proxy #49655

Closed
opened 2016-10-14 11:36:51 +02:00 by Sybren A. Stüvel · 9 comments

System Information
Kubuntu 16.04

Blender Version
Broken: master, 49c2dbc5db

Short description of error

When there is an animated proxied armature, the armature is of course stored in a library. When reloading that library & saving the main blend file, reopening the main blend file produces an error and the proxy is broken.

Exact steps for others to reproduce the error

  • Unzip reloading_issue.zip
  • Open shot_file.blend
  • In the outliner, right-click "dependent_files/armature.blend" and choose "Reload"
  • Save the file to shot_file_saved.blend
  • Re-open shot_file_saved.blend
  • See the error:
 Pose copy error, pose to:0x7fc5f522c208 from:(nil)
 Proxy copy error, lib Object: Armature proxy Object: group_rig_proxy
**System Information** Kubuntu 16.04 **Blender Version** Broken: master, 49c2dbc5dbaefd3a2 **Short description of error** When there is an animated proxied armature, the armature is of course stored in a library. When reloading that library & saving the main blend file, reopening the main blend file produces an error and the proxy is broken. **Exact steps for others to reproduce the error** - Unzip [reloading_issue.zip](https://archive.blender.org/developer/F378222/reloading_issue.zip) - Open `shot_file.blend` - In the outliner, right-click "dependent_files/armature.blend" and choose "Reload" - Save the file to `shot_file_saved.blend` - Re-open `shot_file_saved.blend` - See the error: ``` Pose copy error, pose to:0x7fc5f522c208 from:(nil) Proxy copy error, lib Object: Armature proxy Object: group_rig_proxy
Sybren A. Stüvel self-assigned this 2016-10-14 11:36:51 +02:00
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren
Author
Member

Datablocks in file saved before reloading the lib:

 845: Object          @ 107408543944840 id.name='OBgroup_rig_proxy'
    b'id' = '<ID>'
    b'adt' = 106309031058728
    ...
    b'parent' = 0
    b'proxy' = 107408544059528
    b'proxy_group' = 107408543946632
    b'proxy_from' = 0
    b'ipo' = 0
    b'bb' = 0
    b'action' = 0
    b'poselib' = 0
    b'pose' = 106721357388040
    b'data' = 106790068298952

 951: ID              @ 106790068298952 name='ARArmature' @//dependent_files/armature.blend
    b'next' = 0
    b'prev' = 0
    b'newid' = 0
    b'lib' = 107545988024456
    b'name' = b'ARArmature'
    b'flag' = 0
    b'tag' = 1
    b'pad_s1' = 0
    b'us' = 2
    b'icon_id' = 0
    b'properties' = 0

And in the file after reloading the library & saving:

 845: Object          @ 139823217226248 id.name='OBgroup_rig_proxy'
    b'id' = '<ID>'
    b'adt' = 139823197982904
    b'sculpt' = 0
    b'type' = 25
    b'partype' = 0
    b'par1' = 0
    b'par2' = 0
    b'par3' = 0
    b'parsubstr' = b''
    b'parent' = 0
    b'track' = 0
    b'proxy' = 139823205889032
    b'proxy_group' = 139823217224712
    b'proxy_from' = 0
    b'ipo' = 0
    b'bb' = 0
    b'action' = 0
    b'poselib' = 0
    b'pose' = 139823202171496
    b'data' = 139823204617288

But no block name='ARArmature' for pose pointer 139823202171496 is saved.

Datablocks in file saved before reloading the lib: ``` 845: Object @ 107408543944840 id.name='OBgroup_rig_proxy' b'id' = '<ID>' b'adt' = 106309031058728 ... b'parent' = 0 b'proxy' = 107408544059528 b'proxy_group' = 107408543946632 b'proxy_from' = 0 b'ipo' = 0 b'bb' = 0 b'action' = 0 b'poselib' = 0 b'pose' = 106721357388040 b'data' = 106790068298952 951: ID @ 106790068298952 name='ARArmature' @//dependent_files/armature.blend b'next' = 0 b'prev' = 0 b'newid' = 0 b'lib' = 107545988024456 b'name' = b'ARArmature' b'flag' = 0 b'tag' = 1 b'pad_s1' = 0 b'us' = 2 b'icon_id' = 0 b'properties' = 0 ``` And in the file after reloading the library & saving: ``` 845: Object @ 139823217226248 id.name='OBgroup_rig_proxy' b'id' = '<ID>' b'adt' = 139823197982904 b'sculpt' = 0 b'type' = 25 b'partype' = 0 b'par1' = 0 b'par2' = 0 b'par3' = 0 b'parsubstr' = b'' b'parent' = 0 b'track' = 0 b'proxy' = 139823205889032 b'proxy_group' = 139823217224712 b'proxy_from' = 0 b'ipo' = 0 b'bb' = 0 b'action' = 0 b'poselib' = 0 b'pose' = 139823202171496 b'data' = 139823204617288 ``` But no block `name='ARArmature'` for pose pointer `139823202171496` is saved.
Sybren A. Stüvel was unassigned by Bastien Montagne 2016-10-14 15:35:15 +02:00
Bastien Montagne self-assigned this 2016-10-14 15:35:15 +02:00
Member

Added subscriber: @GregZaal

Added subscriber: @GregZaal
Member

Any idea how to avoid this or work around it? Running into this problem repeatedly in various productions, losing lots of animation work.

Any idea how to avoid this or work around it? Running into this problem repeatedly in various productions, losing lots of animation work.

Added subscriber: @edolstra

Added subscriber: @edolstra
Member

For anyone googling this, here's my current workaround:

When you open the scene and notice the animation is gone, it's kind of not. What's actually missing is the proxy, the animation data (the action) is still there, but probably only so long as you don't save the file again and reopen it.

So create another proxy from the same rig, and then link the old animation data to it using python:

# With the new proxy object as the active (last selected) object:
bpy.context.object.animation_data_create()
bpy.context.object.animation_data = bpy.data.actions["Whatever the name of the action for the old proxy was, probably the name of the armature and '_proxy' in it"]

That's worked for me so far.

For anyone googling this, here's my current workaround: When you open the scene and notice the animation is gone, it's kind of not. What's actually missing is the proxy, the animation data (the action) is still there, but probably only so long as you don't save the file again and reopen it. So create another proxy from the same rig, and then link the old animation data to it using python: ``` # With the new proxy object as the active (last selected) object: bpy.context.object.animation_data_create() bpy.context.object.animation_data = bpy.data.actions["Whatever the name of the action for the old proxy was, probably the name of the armature and '_proxy' in it"] ``` That's worked for me so far.

This issue was referenced by df88d54284

This issue was referenced by df88d54284338777d67d2cb1f760e70a1ee6a497

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49655
No description provided.